<resources>
    <string name="app_name">Tomo Sushi Order App</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to\nTomo Sushi</string>
    <string name="order">Order</string>
    <string name="bill">Bill</string>
    <string name="call_waiter">Call Waiter</string>
    <string name="restaurant_name">Tomo Sushi</string>
    <string name="tab_a">Tab A</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="cart">Cart List</string>
    <string name="order_list">Order List</string>
    <string name="receipt">Receipt</string>
    <string name="zero">1</string>
    <string name="nomer">No.</string>
    <string name="name">Name</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="harga">Price</string>
    <string name="total">Total</string>
    <string name="pay">Pay</string>
    <string name="rupiah">Rp {0}</string>
    <string name="persen">{0}%</string>
    <string name="diskon">Diskon: {0}</string>
    <string name="total_harga">Total: {0}</string>
    <string name="grand_total_harga">Grand Total: {0}</string>
    <string name="service">Service: {0}</string>
    <string name="table_not_available">Table not Available</string>
    <string name="ppn">Ppn: {0}</string>
    <string name="exit">exit</string>
    <string name="note">Exp: less ice</string>
    <string name="checkout">Checkout</string>
    <string name="setting">Setting</string>
    <string name="base_url">Base Url</string>
    <string name="no_meja">No. Meja: {0}</string>
    <string name="save">Save</string>
    <string name="timer_screensaver">Timer Screensaver</string>
    <string name="back">Back</string>
    <string name="verify">Verify</string>
    <string name="voids">Void</string>
    <string name="order_process">Order Process</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="my_order">My Order</string>
    <string name="in_second">In Second</string>
    <string name="welcome_text">Welcome Text</string>
    <string name="id_meja">Nomer Meja</string>
</resources>
