<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_all"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/cfffff"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/ll_wrapper_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_back"
            style="@style/ButtonStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/back"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:visibility="gone"
            android:id="@+id/b_setting"
            style="@style/ButtonStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/setting"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/b_go_to_main"
            style="@style/ButtonStandard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/order"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>