<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:background="@drawable/background_all"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/setting"
        android:textColor="@color/cfffff"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/ll_wrapper_setting"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_container_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/welcome_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_welcome"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_edit_text"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:maxLines="3"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_base_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/tv_base_url"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/base_url"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_base_url"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_edit_text"
                android:imeOptions="actionDone"
                android:inputType="textUri"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/timer_screensaver"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_timer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_edit_text"
                android:hint="@string/in_second"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_container_id_meja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_id_meja"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/id_meja"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_no_meja"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_edit_text"
                android:ellipsize="end"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/b_save_setting"
            style="@style/ButtonStandard"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_round"
            android:text="@string/save"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b_back"
            style="@style/ButtonStandard"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_round"
            android:text="@string/back"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>